--- a/src/Button.css
+++ b/src/Button.css
@@ -1,9 +1,19 @@
 .Button {
-    height:40px;
-    margin:8px 8px; 
+  background-color: green;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
   }
   
   .SelectedButton {
     background-color: red;
     color: white;
+  }
+
+  .msg-button {
+    padding: 10px 0px 20px 10px;
   }
